--- a/index.html
+++ b/index.html
@@ -51,23 +51,23 @@
         </section>       
     </header>
     <section class="min-h-screen w-full flex items-center px-10 md:px-24 bg-dark">
-        <div class="flex space-x-20 items-center">
-            <div class="img-profile rounded-full overflow-hidden"> 
+        <div class="flex items-center flex-wrap flex-col lg:flex-row">
+            <div class="mr-0 lg:mr-20 img-profile rounded-full overflow-hidden"> 
                 <img class="object-cover w-full h-full object-center" src="img//perfil.jpg" alt="">
             </div>
-            <div class="w-2/3 text-secundary">
+            <div class="flex-1 text-secundary">
                 <h2 class="text-2xl font-bold text-white">Acerca de mi</h2>
                 <div class="my-4">
                     <p class="mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam a, libero sed architecto tenetur dicta accusamus non molestiae placeat illum alias modi, at sapiente id.</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis repellat odio hic enim rem molestiae.</p>
                 </div>
-                <div class="flex px-10 py-8 mb-10 bg-gray">
-                    <div class="flex-1">
+                <div class="flex px-10 py-8 mb-10 bg-gray flex-wrap justify-between">
+                    <div class="flex-initial mr-5">
                         <p class="py-2"><strong class="text-primary mr-4">Edad: </strong>21 años</p>
                         <p class="py-2"><strong class="text-primary mr-4">Teléfono: </strong>+51 986 147 315</p>
                         <p class="py-2"><strong class="text-primary mr-4">Experiencia: </strong>2 años</p>
                     </div>  
-                    <div class="flex-1"> 
+                    <div class="flex-initial"> 
                         <p class="py-2"><strong class="text-primary mr-4">Dirección: </strong>Lima, Lima - Lince</p>
                         <p class="py-2"><strong class="text-primary mr-4">Freelance: </strong>disponible</p>
                         <p class="py-2"><strong class="text-primary mr-4">Email: </strong>noemifelicitaramos@gmail.com</p>
