--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
     </section>
     <section id="skills"  class="min-h-screen w-full flex items-center px-10 md:px-24 bg-dark">
         <div class="w-full mt-20">
-            <h2 class="text-2xl font-bold text-white" >Mis habilidades</h2>
-            <div class="flex justify-around h-80 items-center my-8">
-                <div class="text-center">
+            <h2 class="text-2xl font-bold text-white text-center sm:text-left" >Mis habilidades</h2>
+            <div class="flex justify-around h-auto sm:h-80 items-center my-4 lg:my-8 flex-wrap">
+                <div class="text-center m-5">
                     <div class="bg-gray w-28 h-28 p-2">
                         <div class="w-full h-full rounded-full border-4 border-white border-opacity-50">
                             <img class="object-contain object-center w-full h-full p-4" src="icon/android.svg" alt="">
@@ -91,7 +91,7 @@
                     </div>
                 <span class="inline-block py-4 text-white text-sm">Android Studio</span>
                 </div>
-                <div class="text-center">
+                <div class="text-center m-5">
                     <div class="bg-gray w-28 h-28 p-2">
                         <div class="w-full h-full rounded-full border-4 border-white border-opacity-50">
                             <img class="object-contain object-center w-full h-full p-3" src="icon/java.svg" alt="">
@@ -99,8 +99,7 @@
                     </div>
                 <span class="inline-block py-4 text-white text-sm">Java</span>
                 </div>
-
-                <div class="text-center">
+                <div class="text-center m-5">
                     <div class="bg-gray w-28 h-28 p-2">
                         <div class="w-full h-full rounded-full border-4 border-white border-opacity-50">
                             <img class="object-contain object-center w-full h-full p-3" src="icon/php.svg" alt="">
@@ -109,32 +108,32 @@
                 <span class="inline-block py-4 text-white text-sm">Php</span>
                 </div>
             </div>
-            <div class="flex justify-around">
-                <div class="text-center">
+            <div class="flex justify-around flex-wrap">
+                <div class="text-center w-32 m-5 lg:m-2">
                     <img class="inline-block" src="icon/adobeillustrator.svg" alt="">
                     <span class="block py-4 text-white text-xs">Adobe Illustrator</span>
                 </div>
-                <div class="text-center">
+                <div class="text-center w-32 m-5 lg:m-2">
                     <img class="inline-block"  src="icon/adobephotoshop.svg" alt="">
                     <span class="block py-4 text-white text-xs">Adobe Photoshop</span>
                 </div>
-                <div class="text-center">
+                <div class="text-center w-32 m-5 lg:m-2">
                     <img class="inline-block"  src="icon/adobepremiere.svg" alt="">
                     <span class="block py-4 text-white text-xs">Adobe Premiere</span>
                 </div>
-                <div class="text-center">
+                <div class="text-center w-32 m-5 lg:m-2">
                     <img class="inline-block"  src="icon/adobeaftereffects.svg" alt="">
                     <span class="block py-4 text-white text-xs">Adobe After Effects cc</span>
                 </div>
-                <div class="text-center">
+                <div class="text-center w-32 m-5 lg:m-2">
                     <img class="inline-block"  src="icon/adobelightroomclassic.svg" alt="">
                     <span class="block py-4 text-white text-xs">Adobe Lightromm cc</span>
                 </div>
-                <div class="text-center">
+                <div class="text-center w-32 m-5 lg:m-2">
                     <img class="inline-block"  src="icon/adobeindesign.svg" alt="">
                     <span class="block py-4 text-white text-xs">Adobe InDesign</span>
                 </div>
-                <div class="text-center">
+                <div class="text-center w-32 m-5 lg:m-2">
                     <img class="inline-block"  src="icon/adobexd.svg" alt="">
                     <span class="block py-4 text-white text-xs">Adobe XD</span>
                 </div>
