--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="mb-10 text-center sm:text-left">
-                    <a class="px-6 py-2 rounded-full border-2 button-secundary " href="#">descargar cv</a>
+                    <a class="px-6 py-2 rounded-full border-2 button-secundary uppercase" href="#">descargar cv</a>
                 </div>
             </div>
         </div>
@@ -82,7 +82,7 @@
     <section id="skills"  class="min-h-screen w-full flex items-center px-10 md:px-24 bg-dark">
         <div class="w-full mt-20">
             <h2 class="text-2xl font-bold text-white text-center sm:text-left" >Mis habilidades</h2>
-            <div class="flex justify-around h-auto sm:h-80 items-center my-4 lg:my-8 flex-wrap">
+            <div class="flex justify-around h-auto sm:h-80 items-center my-4 lg:my-0 xl:my-8 flex-wrap">
                 <div class="text-center m-5">
                     <div class="bg-gray w-28 h-28 p-2">
                         <div class="w-full h-full rounded-full border-4 border-white border-opacity-50">
@@ -137,6 +137,89 @@
                     <img class="inline-block"  src="icon/adobexd.svg" alt="">
                     <span class="block py-4 text-white text-xs">Adobe XD</span>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section id="portfolio"  class="min-h-screen w-full flex items-center px-10 md:px-24 bg-dark">
+        <div class="w-full mt-32">
+            <div class="flex items-end py-10">
+                <h2 class="text-2xl font-bold text-white text-center sm:text-left" >Mi portafolio</h2>
+                <div id="menu-potfolio">
+                    <ul class="flex text-sm mx-10 text-white">
+                        <li class="mx-3 item-select">Todo</li>
+                        <li class="mx-3">Diseño</li>
+                        <li class="mx-3">Fotografia</li>
+                        <li class="mx-3">Illustraciones</li>
+                        <li class="mx-3">Videos</li>
+                        <li class="mx-3">Paginas Web</li>
+                        <li class="mx-3">App</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="grid grid-cols-3 gap-2.5 px-24">
+                <div class="h-52 item">
+                    <div class="h-full w-full relative">
+                        <img class="w-full h-full object-cover object-center" src="img/1.jpg" alt="">
+                        <div class="absolute bg-black bg-opacity-80 w-full h-full top-0 flex flex-col items-center justify-center text-center p-10">
+                            <img class="h3 w-8" src="icon/eye.svg" alt="">
+                            <h3 class="font-bold text-white py-2">Lorem ipsum dolor sit.</h3>
+                            <p class="text-xs text-gray-300 leading-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, quod!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="h-52 item">
+                    <div class="h-full w-full relative">
+                        <img class="w-full h-full object-cover object-center" src="img/foto.jpg" alt="">
+                        <div class="absolute bg-black bg-opacity-80 w-full h-full top-0 flex flex-col items-center justify-center text-center p-10">
+                            <img class="h3 w-8" src="icon/eye.svg" alt="">
+                            <h3 class="font-bold text-white py-2">Lorem ipsum dolor sit.</h3>
+                            <p class="text-xs text-gray-300 leading-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, quod!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="h-52 item">
+                    <div class="h-full w-full relative">
+                        <img class="w-full h-full object-cover object-center" src="img/perfil.jpg" alt="">
+                        <div class="absolute bg-black bg-opacity-80 w-full h-full top-0 flex flex-col items-center justify-center text-center p-10">
+                            <img class="h3 w-8" src="icon/eye.svg" alt="">
+                            <h3 class="font-bold text-white py-2">Lorem ipsum dolor sit.</h3>
+                            <p class="text-xs text-gray-300 leading-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, quod!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="h-52 item">
+                    <div class="h-full w-full relative">
+                        <img class="w-full h-full object-cover object-center" src="img/perfil.jpg" alt="">
+                        <div class="absolute bg-black bg-opacity-80 w-full h-full top-0 flex flex-col items-center justify-center text-center p-10">
+                            <img class="h3 w-8" src="icon/eye.svg" alt="">
+                            <h3 class="font-bold text-white py-2">Lorem ipsum dolor sit.</h3>
+                            <p class="text-xs text-gray-300 leading-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, quod!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="h-52 item">
+                    <div class="h-full w-full relative">
+                        <img class="w-full h-full object-cover object-center" src="img/perfil.jpg" alt="">
+                        <div class="absolute bg-black bg-opacity-80 w-full h-full top-0 flex flex-col items-center justify-center text-center p-10">
+                            <img class="h3 w-8" src="icon/eye.svg" alt="">
+                            <h3 class="font-bold text-white py-2">Lorem ipsum dolor sit.</h3>
+                            <p class="text-xs text-gray-300 leading-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, quod!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="h-52 item">
+                    <div class="h-full w-full relative">
+                        <img class="w-full h-full object-cover object-center" src="img/perfil.jpg" alt="">
+                        <div class="absolute bg-black bg-opacity-80 w-full h-full top-0 flex flex-col items-center justify-center text-center p-10">
+                            <img class="h3 w-8" src="icon/eye.svg" alt="">
+                            <h3 class="font-bold text-white py-2">Lorem ipsum dolor sit.</h3>
+                            <p class="text-xs text-gray-300 leading-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, quod!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mt-3">
+                <button class="px-10 py-1.5 rounded-full border-2 button-secundary lowercase text-sm">ver mas</button>
             </div>
         </div>
     </section>
